# hardcamdriver

./: CMakeLists.txt  README.md  setup_env.ps1
src/: SimpleMediaSource.cpp  SimpleMediaSource.h  SimpleMediaStream.cpp  SimpleMediaStream.h  VirtualCameraSpoofer.cpp  VirtualCameraSpoofer.h  main.cpp
